B: A task nixoyat bajarildi

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "exemple",
   "version": "1.0.0",
-  "description": "B: bu bizning birinchi loyihamiz",
+  "description": "Bu bizning birinchi loyihamiz",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -9,11 +9,10 @@
     "train": "nodemon train.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "\"valijon (jon)",
+  "author": "valijon (jon)",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.17.3",
     "nodemon": "^3.1.10"
   }
 }
