B: Feat: Publishing and B Task

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exemple",
+  "name": "reja",
   "version": "1.0.0",
   "description": "Bu bizning birinchi loyihamiz",
   "main": "server.js",
@@ -9,10 +9,14 @@
     "train": "nodemon train.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "valijon (jon)",
+  "author": "JON",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
+    "express": "^4.17.3",
+    "mongodb": "^3.2.6"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
